fix: update z-index and disabled state for copy input border

--- a/src/components/inputs/CopyInput/CopyInput.scss
+++ b/src/components/inputs/CopyInput/CopyInput.scss
@@ -68,6 +68,11 @@
 		&.__Disabled {
 			border-color: transparent;
 
+			&:focus-within {
+				box-shadow: none;
+				border: none;
+			}
+
 			input.CopyInput__Input {
 				text-align: right;
 			}
